# agy-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
bot/: __init__.py  agent.py  cli.py  config.py  daemon.py  main.py
bot/database/: __init__.py  db.py
bot/handlers/: admin.py  chat.py  models.py  quota.py  session.py  start.py
bot/middleware/: __init__.py  auth.py
bot/utils/: __init__.py  formatting.py
