[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agy-telegram-bot"
version = "1.0.0"
description = "Telegram bridge for Google Antigravity (AGY) — chat with AGY from your phone"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "google-antigravity",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
agy-telegram-bot = "bot.cli:main"

[tool.setuptools.packages.find]
include = ["bot*"]
